-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8286229 | 18u-cpu | Zhengyu Gu | P4 | Resolved | Fixed | master |
| JDK-8285758 | 18.0.2 | Zhengyu Gu | P4 | Resolved | Fixed | b06 |
| JDK-8286167 | 17.0.5-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8285757 | 17.0.4 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
| JDK-8285924 | 11.0.16 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
==878128== at 0x484486F: malloc (vg_replace_malloc.c:381)
==878128== by 0x5AE7745: malloc (os.cpp:656)
==878128== by 0x5AE7745: malloc (os.cpp:632)
==878128== by 0x5AE7745: malloc (os.cpp:629)
==878128== by 0x5AE7745: os::strdup(char const*, MEMFLAGS) (os.cpp:584)
==878128== by 0x546D311: CodeHeapState::aggregate(outputStream*, CodeHeap*, unsigned long) (codeHeapState.cpp:759)
==878128== by 0x546659E: CodeCache::aggregate(outputStream*, unsigned long) (codeCache.cpp:1643)
==878128== by 0x5494264: CompileBroker::print_heapinfo(outputStream*, char const*, unsigned long) (compileBroker.cpp:2856)
==878128== by 0x554B831: DCmd::parse_and_execute(DCmdSource, outputStream*, char const*, char, JavaThread*) (diagnosticFramework.cpp:409)
==878128== by 0x52E58BE: jcmd(AttachOperation*, outputStream*) (attachListener.cpp:203)
==878128== by 0x52E64FC: attach_listener_thread_entry (attachListener.cpp:427)
==878128== by 0x52E64FC: attach_listener_thread_entry(JavaThread*, JavaThread*) (attachListener.cpp:377)
==878128== by 0x5D4AB1D: JavaThread::thread_main_inner() (thread.cpp:1291)
==878128== by 0x5D5080F: Thread::call_run() (thread.cpp:356)
==878128== by 0x5AF3017: thread_native_entry(Thread*) (os_linux.cpp:706)
==878128== by 0x4927B19: start_thread (pthread_create.c:443)
==878128== by 0x49AB8E3: clone (clone.S:100)
- backported by
-
JDK-8285757 CodeHeapState::aggregate() leaks blob_name
-
- Resolved
-
-
JDK-8285758 CodeHeapState::aggregate() leaks blob_name
-
- Resolved
-
-
JDK-8285924 CodeHeapState::aggregate() leaks blob_name
-
- Resolved
-
-
JDK-8286167 CodeHeapState::aggregate() leaks blob_name
-
- Resolved
-
-
JDK-8286229 CodeHeapState::aggregate() leaks blob_name
-
- Resolved
-
- relates to
-
JDK-8219586 CodeHeap State Analytics processes dead nmethods
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/234724cf
-
Commit
openjdk/jdk17u-dev/1cbe38a3
-
Commit
openjdk/jdk18u/6b0bcaf7
-
Commit
openjdk/jdk/d4a48843
-
Review
openjdk/jdk11u-dev/1046
-
Review
openjdk/jdk17u-dev/364
-
Review
openjdk/jdk18u/110
-
Review
openjdk/jdk/8132