8284458: CodeHeapState::aggregate() leaks blob_name